@@ -3,7 +3,7 @@ title Auth Server
 :start
 echo Starting Auth Server.
 echo.
-java --enable-preview -Dfile.encoding=UTF-8 -Xmx256m -p ./lib -cp ./lib/* --add-exports java.base/jdk.internal.misc=io.github.joealisson.primitive -m org.l2j.authserver/org.l2j.authserver.AuthServer
+java --enable-preview -Dfile.encoding=UTF-8 -XX:+UseZGC -Xmx256m -p ./lib -cp ./lib/* --add-exports java.base/jdk.internal.misc=io.github.joealisson.primitive -m org.l2j.authserver/org.l2j.authserver.AuthServer
 if ERRORLEVEL 2 goto restart
 if ERRORLEVEL 1 goto error
 goto end
